# bevy_remote_inspector

./: .gitignore  Cargo.toml  README.md  biome.jsonc  bun.lockb  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
crates/bevy_remote_enhanced/: Cargo.toml  README.md
crates/bevy_remote_enhanced/src/: builtin_methods.rs  http.rs  lib.rs
crates/bevy_remote_inspector/: Cargo.toml
crates/bevy_remote_inspector/src/: brp_extensions.rs  command.rs  component.rs  entity.rs  lib.rs  request.rs  schedule.rs  type_registry.rs
crates/bevy_remote_inspector2/: Cargo.toml
crates/bevy_remote_inspector2/src/: components.rs  entity.rs  lib.rs  type_registry.rs
crates/bevy_remote_stream/: Cargo.toml
crates/bevy_remote_stream/src/: lib.rs  websocket.rs
crates/bevy_remote_websocket/: Cargo.toml
crates/bevy_remote_websocket/src/: lib.rs
crates/inspector/src/: lib.rs
examples/breakout/: Cargo.toml
examples/breakout/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
inspector/: Cargo.toml
inspector/src/: entity.rs  lib.rs  type_registry.rs
inspector/src/stream/: mod.rs
src/: App.css  App.tsx  store.ts  usePage.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/brp/: client.ts  createSessionSlice.ts  useSession.ts
src/component/: ComponentBadge.tsx  createComponentsSlice.ts  useComponentName.ts  useComponents.ts
src/components/: Layout.tsx  WebSocket.tsx  WsUrlForm.tsx
src/components/registries/: ComponentRegistry.tsx  TypeRegistry.tsx
src/entity/: AddComponentDialog.tsx  EntitiesInspectorPage.tsx  EntitiesInspectorPanel.tsx  EntitiesPanel.tsx  EntitiesTableView.tsx  EntitiesTreeView.tsx  EntityName.tsx  createEntitiesSlice.ts  createInspectorSlice.ts  entityUtils.ts  useAddComponent.ts  useDespawnEntity.ts  useEcsQuery.ts  useEntitiesTrees.ts  useEntity.ts  useEntityName.ts  useEntityQuery.ts  useEntityTree.ts  useEntityUpdates.ts  useInspector.ts  useRemoveComponent.ts  useReparent.ts  useSpawnEntity.ts  useToggleComponent.ts  useToggleVisibility.ts  useUpdateComponent.ts  useUpdateEntityComponent.ts
src/inputs/: ArrayInput.tsx  DynamicForm.tsx  DynamicInput.tsx  EntityInput.tsx  EnumInput.tsx  InputLabel.tsx  MapInput.tsx  OpaqueInput.tsx  StructInput.tsx  TupleInput.tsx  TupleStructInput.tsx
src/inputs/ColorInput/: ColorInput.tsx  hsla.ts  hsva.ts  hwba.ts  laba.ts  lcha.ts  linearRgba.ts  oklaba.ts  oklcha.ts  srgba.ts  xyza.ts
src/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/page/: RenderedPage.tsx  createPageSlice.ts
src/schedule/: ScheduleFilterPanel.tsx  ScheduleGraph.tsx  ScheduleNode.tsx  SchedulePage.tsx  SetNode.tsx  SystemNode.tsx  createSchedulesSlice.ts  layout.ts  useTextScale.ts
src/shared/: base-node.tsx
src/shared/hooks/: use-toast.ts
src/shared/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  form.tsx  icon-button.tsx  input.tsx  list-box.tsx  menu.tsx  native-select.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  select.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/theme/: ThemeToggle.tsx
src/type-registry/: bevyTypes.ts  createTypeRegistrySlice.ts  prettyTypeName.ts  types.ts  useTypeRegistry.ts
src/websocket/: WebSocketConnector.tsx  WebSocketReconnectOverlay.tsx  WsUrlForm.tsx  createWsSlice.ts  useCommand.ts  useWs.ts
