[workspace]
members = ["crates/*", "examples/simple"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.15.0-dev", git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
    "bevy_remote",
    "serialize",
] }
serde = "1"
serde_json = "1"
anyhow = "1"

[profile.dev]
debug = 0
