[package]
name = "bevy_remote_enhanced"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["http"]
http = ["dep:async-io", "dep:smol-hyper"]

[dependencies]
# bevy
bevy_app = { version = "0.15.0-rc.3" }
bevy_derive = { version = "0.15.0-rc.3" }
bevy_ecs = { version = "0.15.0-rc.3", features = [
  "serialize",
] }
bevy_hierarchy = { version = "0.15.0-rc.3" }
bevy_reflect = { version = "0.15.0-rc.3" }
bevy_tasks = { version = "0.15.0-rc.3" }
bevy_time = { version = "0.15.0-rc.3" }
bevy_utils = { version = "0.15.0-rc.3" }

# other
anyhow = "1"
hyper = { version = "1", features = ["server", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
http-body-util = "0.1"
async-channel = "2"

# dependencies that will not compile on wasm
[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-io = { version = "2", optional = true }
smol-hyper = { version = "0.1", optional = true }
