[package]
name = "bevy_remote_inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bevy_remote_stream = { path = "../bevy_remote_stream" }
petgraph = "0.6.5"

[features]
default = ["bevy_render"]
bevy_render = ["bevy/bevy_render"]
