[package]
name = "example_breakout"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { workspace = true, default-features = true, features = [
    "dynamic_linking",
] }
serde.workspace = true
serde_json.workspace = true
bevy_remote_inspector = { path = "../../crates/bevy_remote_inspector" }
bevy_remote_websocket = { path = "../../crates/bevy_remote_websocket" }
bevy_remote_enhanced = { path = "../../crates/bevy_remote_enhanced" }
bevy_remote_inspector2 = { path = "../../crates/bevy_remote_inspector2" }
