[package]
name = "example_simple"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { workspace = true, default-features = true, features = [
    "dynamic_linking",
] }
serde.workspace = true
serde_json.workspace = true
bevy_remote_inspector = { path = "../../crates/bevy_remote_inspector" }

[profile.dev.package."*"]
opt-level = 3
